Corrigindo retorno de requisições
